<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<prerequisites>
		<maven>3.0.4</maven>
	</prerequisites>

	<groupId>fr.uem.efluid</groupId>
	<artifactId>param-parent</artifactId>
	<version>0.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.4.RELEASE</version>
	</parent>

	<modules>
		<module>param-common</module>
		<module>param-api</module>
		<module>param-app</module>
		<module>param-generator</module>
		<module>param-generator-example</module>
	</modules>

	<properties>

		<java.version>10</java.version>

		<!-- dependencies - libs -->
		<dependency.zip4j.version>1.3.2</dependency.zip4j.version>
		<dependency.ojdbc8.version>12.2.0.1</dependency.ojdbc8.version>
		<dependency.plexus.version>0.0.7</dependency.plexus.version>
		<dependency.maven-plugin-api.version>3.5.4</dependency.maven-plugin-api.version>
		<dependency.maven-plugin-annotations.version>3.5.2</dependency.maven-plugin-annotations.version>
		<dependency.maven-core.version>3.5.4</dependency.maven-core.version>
		<dependency.reflections-utils.version>0.9.11</dependency.reflections-utils.version>
		<dependency.spring-webmvc-pac4j.version>2.2.0</dependency.spring-webmvc-pac4j.version>
		<dependency.pac4j-jee.version>3.0.0</dependency.pac4j-jee.version>
		<dependency.pac4j.version>2.3.0</dependency.pac4j.version>
		<dependency.jaxb.version>2.3.0</dependency.jaxb.version>
		<dependency.activation.version>1.1.1</dependency.activation.version>
		<dependency.swagger-api.version>1.5.18</dependency.swagger-api.version>
		<dependency.springfox-swagger.version>2.8.0</dependency.springfox-swagger.version>
		<dependency.classmate.version>1.3.1</dependency.classmate.version>
		<dependency.thymeleaf-layout.version>2.3.0</dependency.thymeleaf-layout.version>

		<!-- dependencies - webjars -->
		<dependency.bootstrap.version>4.0.0-2</dependency.bootstrap.version>
		<dependency.jquery.version>3.3.1-1</dependency.jquery.version>
		<dependency.popper.version>1.13.0</dependency.popper.version>
		<dependency.swagger-ui.version>2.2.10</dependency.swagger-ui.version>

		<!-- Fixed plugins -->
		<plugin.maven-plugin.version>3.5.2</plugin.maven-plugin.version>

	</properties>

	<build>

		<pluginManagement>
			<plugins>
				<!-- Complete default informations about used source code -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>

				<!-- For maven plugin build -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>${plugin.maven-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>${project.groupId}</groupId>
					<artifactId>param-generator</artifactId>
					<version>${project.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>

	</build>

	<dependencyManagement>

		<dependencies>

			<!-- Basic common tools -->

			<dependency>
				<groupId>net.lingala.zip4j</groupId>
				<artifactId>zip4j</artifactId>
				<version>${dependency.zip4j.version}</version>
			</dependency>

			<dependency>
				<groupId>com.oracle</groupId>
				<artifactId>ojdbc8</artifactId>
				<version>${dependency.ojdbc8.version}</version>
			</dependency>

			<!-- JEE dependencies need to be specified since JDK9 -->
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>${dependency.jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>${dependency.jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${dependency.jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>${dependency.activation.version}</version>
			</dependency>

			<!-- Web Features -->

			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${dependency.swagger-api.version}</version>
			</dependency>

			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${dependency.springfox-swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${dependency.springfox-swagger.version}</version>
			</dependency>

			<!-- Fix on https://github.com/springfox/springfox/issues/948 -->
			<dependency>
				<groupId>com.fasterxml</groupId>
				<artifactId>classmate</artifactId>
				<version>${dependency.classmate.version}</version>
			</dependency>

			<!-- Pac4j related libraries -->

			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>spring-webmvc-pac4j</artifactId>
				<version>${dependency.spring-webmvc-pac4j.version}</version>
			</dependency>

			<!-- For basic Servlet integration of PAC4J -->
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>j2e-pac4j</artifactId>
				<version>${dependency.pac4j-jee.version}</version>
			</dependency>

			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-http</artifactId>
				<version>${dependency.pac4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-jwt</artifactId>
				<version>${dependency.pac4j.version}</version>
			</dependency>

			<!-- WebJars (Web libraries managed as java artifacts) -->

			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>bootstrap</artifactId>
				<version>${dependency.bootstrap.version}</version>
			</dependency>

			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>jquery</artifactId>
				<version>${dependency.jquery.version}</version>
			</dependency>

			<dependency>
				<groupId>org.webjars.npm</groupId>
				<artifactId>popper.js</artifactId>
				<version>${dependency.popper.version}</version>
			</dependency>

			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>swagger-ui</artifactId>
				<version>${dependency.swagger-ui.version}</version>
			</dependency>

			<!-- Dependencies for maven plugin development -->

			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-api</artifactId>
				<version>${dependency.maven-plugin-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.maven.plugin-tools</groupId>
				<artifactId>maven-plugin-annotations</artifactId>
				<version>${dependency.maven-plugin-annotations.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-core</artifactId>
				<version>${dependency.maven-core.version}</version>
			</dependency>

			<dependency>
				<groupId>org.sonatype.plexus</groupId>
				<artifactId>plexus-build-api</artifactId>
				<version>${dependency.plexus.version}</version>
			</dependency>

			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>${dependency.reflections-utils.version}</version>
			</dependency>

			<!-- Inter-dependencies -->

			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>param-common</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>param-api</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>param-generator</artifactId>
				<version>${project.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
</project>